--- a/AP/Asset Purchases Markdown.Rmd
+++ b/AP/Asset Purchases Markdown.Rmd
@@ -72,9 +72,9 @@ ggplot(FedAssets, aes(x=as_date(unlist(FedAssets[1])), y=unlist(FedAssets[2]), g
 ```
 \
 \
-When the Federal Reserve announced its QE1 programme, it did so with the intention of 'supporting housing markets and fostering improved conditions in financial markets' (\hyperlink{fomc2008a}{FOMC 2008a}). Despite the fact that the Bank of Japan had experimented with LSAP programmes before 2008 (see \hyperlink{iwata2012}{Iwata and Takenaka (2012)} for an overview), the scale and enduring nature of post-2008 LSAP programmes, relative to pre-crisis policy, is what has made these monetary policy tools unconventional. The precise nature of their effects on interest rates, asset prices and the wider macroeconomy is the subject of much research.   
+When the Federal Reserve announced its QE1 programme, it did so with the intention of 'supporting housing markets and fostering improved conditions in financial markets' (\hyperlink{fomc2008a}{FOMC 2008a}). Despite the fact that the Bank of Japan had experimented with LSAP programmes before 2008 (see \hyperlink{iwata2012}{Iwata and Takenaka (2012)} for an overview), the scale and enduring nature of post-2008 LSAP programmes, relative to pre-crisis policy, is what has made these monetary policy tools unconventional, with their exact effects unknown. The precise nature of their effects on interest rates, asset prices and the wider macroeconomy is the subject of much research.   
 
-This paper analyses the effects of the Federal Reserve's LSAP programmes using data up to the beginning of 2019. Specifically, the effects on asset prices and wealth inequality are analysed. This is done using an SVAR model to compute the effects of the Federal Reserve's LSAP programmes on asset prices, along with macroeconomic and financial variables. 
+This paper analyses the effects of the Federal Reserve's LSAP programmes using data up to the beginning of 2019. Specifically, the effects on asset prices and wealth inequality are analysed. This is done using an VAR model to compute the effects of the Federal Reserve's LSAP programmes on asset prices, along with macroeconomic and financial variables. 
 
 The effects will then be used to compute a measure of the effect on inequality, following the approach of \hyperlink{domanski2016}{Domanski, Scatigna and Zabai (2016)}. This is done by constructing household balance sheets for each income quintile, and analysing changes in the price and yield of assets - due to LSAP programmes - that are held in different proportions by different income quintiles.
 
@@ -82,23 +82,23 @@ The effects will then be used to compute a measure of the effect on inequality, 
 
 ## LSAP Programmes as a Monetary Policy Tool
 
-LSAP programmes, along with other balance sheet policies, are one of the two ways in which central banks implement monetary policy (the other being interest rate policy). LSAP programmes have played a significant role in the Federal Reserve's attempts to influence asset prices, financial conditions and the macroeconomy since 2008 and after the federal funds target was cut to zero. 
+LSAP programmes, along with other balance sheet policies, are one of two ways in which central banks implement monetary policy (the other being interest rate policy). LSAP programmes have played a significant role in the Federal Reserve's attempts to influence asset prices, financial conditions and the macroeconomy since 2008 after the federal funds target was cut to zero. 
 
-Two transmission mechanisms through which LSAP programmes affect asset prices are commonly identified in the literature^[It is worth pointing out that even for conventional monetary policy, there is no consensus about the mechanisms through which policy influences the real economy. There is debate about whether interest rate policy operates through the 'cost of borrowing' channel or through 'asset price channels' (\hyperlink{mishkin2016}{Mishkin (2016)}). Unsurprisingly then, there is no consensus about how unconventional monetary policy affects assets prices and in turn the real economy.]: the 'portfolio rebalancing effect' and the 'signalling effect'. The portfolio balance effect relies on the assumption that assets are imperfect substitutes. This means that as the Federal Reserve buys up safer, longer-term assets (eg long-term Treasuries), the price of these assets has to rise (and yields fall) so that households are willing to move their portfolios into riskier, short term assets, increasing prices and depressing yields on these assets as well^[More specifically, Wallace Neutrality \hyperlink{wallace1981}{(Wallace 1981)} does not hold.]. 
+Two transmission mechanisms through which LSAP programmes affect asset prices are commonly identified in the literature^[It is worth pointing out that even for conventional monetary policy, there is no consensus about the mechanisms through which policy influences the real economy. There is much debate about whether interest rate policy operates through the 'cost of borrowing' channel or through 'asset price channels' (\hyperlink{mishkin2016}{Mishkin (2016)}). Unsurprisingly then, there is no consensus about how unconventional monetary policy affects assets prices and in turn the real economy.]: the 'portfolio rebalancing effect' and the 'signalling effect'. The portfolio balance effect relies on the assumption that assets are imperfect substitutes. This means that as the Federal Reserve buys up safer, longer-term assets (eg long-term Treasuries), the price of these assets has to rise (and yields fall) so that households are willing to move their portfolios into riskier, short term assets, increasing prices and depressing yields on these assets as well^[More specifically, Wallace Neutrality \hyperlink{wallace1981}{(Wallace 1981)} does not hold.]. 
 
 Therefore, as well as depressing longer-term yields on the class of assets purchased by the central bank, the portfolio rebalancing effect results in households and private agents moving out of now lower yielding agency debt, MBS and Treasuries into shorter term, riskier assets such as equities and corporate bonds. This has the effect of reducing the yields and increasing the price on these assets as well (\hyperlink{gagnon2011}{Gagnon, Raskin, Remache and Sack (2011)}). Therefore, LSAP programmes have the effect of increasing prices and reducing yields across a broad range of assets^[The portfolio rebalancing effect also works to reduce interest rates through a reduction in risk premiums. Specifically, when the Federal Reserve purchases longer-term securities it removes 'term premium' - the risk associated with holding longer duration assets, which is an important component in risk premiums - from the market.  Reducing risk premium improves market functioning in general. For a wider discussion see \hyperlink{gagnon2011}{Gagnon et al. (2011)} and \hyperlink{mishkin2016}{Mishkin (2016)}.].
 
 The signalling effect occurs as a result of the Federal Reserve making a credible commitment to continue its LSAP programme into the future. For example, when the Federal Reserve announced QE3, it committed to purchasing \$40 billion worth of MBS and \$45 billion of longer-term Treasuries 'until the outlook for the labour market has improved substantially in a context of price stability' \hyperlink{fomc2013}{(FOMC 2013)}. Therefore the FOMC makes a state-contingent commitment to maintain LSAP progammes until its wider macroeconomic objectives have been achieved, namely its inflation target, increased employment and growth.    
 
-In general this type of commitment signals that monetary policy will be kept loose for a certain duration, with agents having an understanding of the conditions under which monetary policy will be tightened. This should further reduce long-term interest rates as agents know short term rates will be lower for longer.  Specifically, if the Federal Reserve commits to buying assets at a future date, then the price of these assets will rise now (otherwise arbitrage is possible: agents could buy these assets now and sell them to the Federal Reserve at a higher price at the future date), suppressing yields on these assets. Also, a commitment to continue a LSAP programme indicates interest rates will be held lower for longer (\hyperlink{gangnon2011}{Gagnon et al. 2011}). 
+In general this type of commitment signals that monetary policy will be kept loose for a certain duration, with agents having an understanding of the conditions under which monetary policy will be tightened. This should further reduce long-term interest rates as agents know short term rates will be lower for longer.  Specifically, if the Federal Reserve commits to buying assets at a future date, then the price of these assets will increase now (otherwise arbitrage is possible: agents could buy these assets now and sell them to the Federal Reserve at a higher price at the future date), suppressing yields on these assets. Also, a commitment to continue a LSAP programme indicates interest rates will be held lower for longer (\hyperlink{gangnon2011}{Gagnon et al. 2011}). 
 
-The intention of LSAP programmes is to depress interest rates and increase asset prices across different asset classes and maturities in order to achieve the Federal Reserve's macroeconomic objectives. Lower interest rates and higher asset prices will help to increase consumption and investment in the economy. LSAP programmes, through the aforementioned portfolio rebalancing and signalling effects, lead to increases in the wealth of households and the value of firms. Households therefore increase their consumption and firms their investment, spurring economic growth and employment.
+The intention of LSAP programmes is to depress interest rates and increase asset prices across different asset classes and maturities in order to achieve the Federal Reserve's macroeconomic objectives. Lower interest rates and higher asset prices will help to increase consumption and investment in the economy. LSAP programmes, through the aforementioned portfolio rebalancing and signalling effects, lead to increases in the wealth of households and the value of firms. Households and firms therefore increase their consumption and investment, spurring economic growth and employment.
 
 \hyperlink{weale2016}{Weale and Wieladek (2016)} find that, using an SVAR model, LSAP programmes implemented in the US and the UK have had positive effects on GDP and CPI. Using monthly data between 2009 and 2014, they find that a LSAP programme shock equivalent to 1 percent of GDP increases real GDP by 0.62 percent in the US and 0.25 percent in the UK. CPI increases by 0.58 percent in the US and 0.32 percent in the UK. They suggest that in the US, the portfolio rebalancing effect is stronger than the signalling effect. No one dominant mechanism is identified for the UK. 
 
 \hyperlink{hesse2018}{Hesse et al. (2018)} investigate the macroeconomic effects of LSAP programmes in the US and the UK, using a Bayesian VAR. They find an effect of approximately 0.2 percent on real GDP and CPI in both countries after a shock equivalent to 1 percent of GDP. Bond yields fall by up to 0.1 percent in the US and 0.2 percent in the UK. Stock prices increase persistently by up to 2 percent in the US and 4 percent in the UK. Interestingly, they find that the impact of earlier LSAP programmes are larger, possibly because subsequent LSAP programmes come to be anticipated by agents so their effects are harder to disentangle from other macroeconomic trends.    
 
-\hyperlink{rosa2012}{Rosa (2012)} uses an 'event study approach' and calculates the monetary policy shock by analysing copies of the Financial Times before and after FOMC meetings to determine the extent to which LSAP programmes were anticipated by agents. \hyperlink{rosa2012}{Rosa (2012)} finds that the effect on asset prices (Treasuries of different maturities, Five Year and Ten Year Treasury Inflation-Protected Securities and S\&P's 500 cash index) is not statistically different from an unanticipated cut in the FOMC target rate. The effect on prices is not explicitly reported. 
+\hyperlink{rosa2012}{Rosa (2012)} uses an 'event study approach' and calculates the monetary policy shock by analysing copies of the Financial Times before and after FOMC meetings to determine the extent to which LSAP programmes were anticipated by agents. \hyperlink{rosa2012}{Rosa (2012)} finds that the effect on asset prices (Treasuries of different maturities, Five and Ten Year Treasury Inflation-Protected Securities and S\&P's 500 cash index) is not statistically different from an unanticipated cut in the FOMC target rate. The effect on prices is not reported. 
 
 \hyperlink{borio2016}{Borio and Zabai (2016)} survey evidence on the effects of unconventional monetary policy measures since 2008. While they conclude that 'there is little doubt that [unconventional monetary policy measures] have had a lasting impact on bond yields [and] various asset prices', it is harder to disentangle the effects owing to specific measures (for example the impact of LSAP programmes from that of forward guidance).    
 
@@ -114,7 +114,7 @@ LSAP programmes attempt to influence yields and asset prices, in order to boost 
 
 Much of the literature that looks at the effects of LSAP programmes follows an 'event study approach' (see \hyperlink{borio2016}{Borio and Zabai (2016)}). This analyses the effect of LSAP programmes using a short time frame immediately before and after the announcement of an LSAP programme. Using a short time frames helps to control for other factors that may influence the variables of interest, thus isolating the effect of monetary policy on asset prices.    
 
-However, \hyperlink{hesse2018}{Hesse et al.'s (2018)} finding that the impact of later LSAP programmes may be reduced because of anticipation by agents reduces the justification for using an event study approach. Some of the effect of the LSAP programme is missed by only considering a short time frame around announcement. Therefore an approach which does not restrict the time frame is justified (see \hyperlink{balatti2016}{Balatti, Brooks, Clements and Kappou (2016)} for a wider discussion of the drawbacks of using an arbitrary event window).
+However, \hyperlink{hesse2018}{Hesse et al.'s (2018)} finding that the impact of later LSAP programmes may be reduced because of anticipation by agents reduces the justification for using an event study approach. Some of the effect of the LSAP programme is missed by only considering a short time frame around the announcement. Therefore an approach which does not restrict the time frame is justified (see \hyperlink{balatti2016}{Balatti, Brooks, Clements and Kappou (2016)} for a wider discussion of the drawbacks of using an arbitrary event window).
 
 This paper uses a vector auto-regressive (VAR) framework to attempt to isolate the effects of the Federal Reserve's LSAP programmes using 15 years worth of data. Initially, a standard reduced form VAR is estimated. This allows an analysis of the effect of the Federal Reserve's LSAP programmes on the variables of interest (specifically the median price of houses in the US, the yield on a Ten Year Treasury and the Wilshire 5000 index). 
 
@@ -126,7 +126,7 @@ $$Y_{t} = C + \beta_{1}Y_{t-1} + \beta_{2}Y_{t-2} + ... + \beta_{p}Y_{t-p} + \va
 $$\varepsilon_{t} \sim N(0,\tiny\sum) $$
 where $Y_{t}$ is an $n$ x 1 vector of endogenous variables, $C$ is an $n$ x 1 vector of unknown constants, $\beta_{1},..., \beta_{p}$ are $n$ x $n$ matrices of unknown parameters and $Y_{t-1}, Y_{t-2},...,Y_{t-p}$ are $n$ x 1 vectors of the lagged endogenous variables. $\varepsilon_{t}$ are the error terms at time $t$, assumed to be uncorrelated over time and $\tiny \sum$ is the variance-co-variance matrix for the error terms, expected to be non-diagonal. P is set to 3 based on the lag suggested by the AIC.   
 
-The model is estimated using data on the Federal Reserve's balance sheet, real GDP, inflation expectations (computed as the difference between the Ten Year Treasury yield and long-term average TIPS yield), median US house price, Ten Year Treasury yield and the Wilshire 5000 index. All data comes from the Federal Reserve Bank of St. Louis website. Data from the beginning of 2014 to beginning of 2019 is used to provide a sufficient period of data before and after the GFC when the Federal Reserve's balance sheet expanded significantly. Logs are taken where the series is geometric and first differences are taken to ensure stationarity when estimating the reduced form VAR. See the Annex for plots of these time series. 
+The model is estimated using data on the Federal Reserve's balance sheet, real GDP, inflation expectations (computed as the difference between the Ten Year Treasury yield and long-term average TIPS yield), median US house price, Ten Year Treasury yield and the Wilshire 5000 index. All data comes from the Federal Reserve Bank of St. Louis website. Data from the beginning of 2014 to beginning of 2019 is used to provide a sufficient period of data before and after the GFC when the Federal Reserve's balance sheet expanded significantly. Logs are taken where the series is geometric and first differences are taken to ensure stationarity when estimating the reduced form VAR. See the [Annex] for plots of these time series. 
 
 In order to decompose the error term, \hyperlink{uhlig2005}{Uhlig's (2005)} Rejection Method is used (see also \hyperlink{danne2015}{Danne (2015)}). This works by running an unrestricted VAR in order to get the fitted values (ie $\hat{C}, \hat{\beta_{1}}, \hat{\beta_{2}}, .... \hat{\beta_{p}}, \hat{\small\sum}$). The shocks are then orthogonalised using a Cholesky decomposition. The corresponding impulse responses are then calculated and an orthogonal impulse vector, $\alpha$, is drawn. This is then multiplied by the impulse responses to make sure the specified sign restrictions are met. If they are, they are used to compute the impulse response function; if not, they dropped. The variables are all in logs, multiplied by 100, as in \hyperlink{uhlig2005}{Uhlig (2005)}.  
 
@@ -191,21 +191,21 @@ Real estate makes up a greater proportion of the second quintile's wealth then i
 
 ## Limitations
 
-Estimating a reduced form VAR means that nothing can be said about how one variable in isolation - in this case, the Federal Reserve's LSAP programme - directly affects another variable of interest. Therefore, certain identifying assumption have to be made. Here, the assumption of non-negative affects on real GDP and inflation expectations are made. These restrictions are always somewhat discretionary and have to be based on economic rationale. No restrictions are placed on the other variables in order to not predetermine their response. Added to this is the fact that additional sign restrictions would improve the identification of the model  (see \hyperlink{danne2015}{Danne (2015)}). 
+Estimating a reduced form VAR means nothing can be said about how one variable in isolation - in this case, the Federal Reserve's LSAP programme - directly affects another variable of interest. Therefore, certain identifying assumption have to be made. Here, the assumption of non-negative affects on real GDP and inflation expectations are made. These restrictions are always somewhat discretionary and have to be based on economic rationale. No restrictions are placed on the other variables in order to not predetermine their response. Added to this is the fact that additional sign restrictions would improve the identification of the model  (see \hyperlink{danne2015}{Danne (2015)}). 
 
 Estimating the unrestricted VAR using OLS is also likely to be biased. This is because the error terms are highly likely to be correlated. Therefore, future research might make use of a Markov Switching VAR model to take into account the structural break in the data pre- and post-GFC when GDP declined, and the Federal Reserve's balance sheet began to expand. There is also a balancing act between including a greater number of variables in the model and keeping the model parsimonious (ie preserving degrees of freedom). This constraint is likely to limit the explanatory power of the model. 
 
-As in \hyperlink{domanski2016}{Domanski et al. (2016)}, possible shifts in portfolio composition by household are abstracted from (due to a lack of regular data on the composition of household wealth). This means that this is a partial equilibrium exercise, where households are assumed not to shift their portfolios based on macroeconomic factors. It is worth noting however, that comparisons of household surveys across time suggest portfolio composition remains fairly stable (\hyperlink{domanski2016}{Domanski et al. (2016)}). However, this conflicts with the supposed portfolio rebalancing effects that result from LSAP programmes. In addition, the quantitative impact of LSAP programmes on employment and incomes is left out of scope. As noted, \hyperlink{bunn2018}{Bunn, Pugh and Yeates (2018)} find this to be an important factor in reducing inequality. 
+As in \hyperlink{domanski2016}{Domanski et al. (2016)}, possible shifts in portfolio composition by households are abstracted from (due to a lack of regular data on the composition of household wealth). This means that this is a partial equilibrium exercise, where households are assumed not to shift their portfolios based on macroeconomic factors. It is worth noting however, that comparisons of household surveys across time suggest portfolio composition remains fairly stable (\hyperlink{domanski2016}{Domanski et al. (2016)}). However, this finding conflicts with the supposed portfolio rebalancing effects that result from LSAP programmes. In addition, the quantitative impact of LSAP programmes on employment and incomes is left out of scope. As noted, \hyperlink{bunn2018}{Bunn, Pugh and Yeates (2018)} find this to be an important factor in reducing inequality. 
 
 
 
 # Conclusions
 
-After the GFC, the FOMC cut interest rates to zero and implemented a number of LSAP programmes. There has been much debate about the financial market and macroeconomic effects of this unconventional monetary policy. Here, the effects on asset prices and inequality have been analysed using a VAR model. The responses of certain assets - the Ten Year Treasury yield, the median US house price and the Wilshire 5000 index - to an expansion in the Federal Reserve's balance sheet have been computed. Then, the balance sheets for households along the income distribution are constructed. This means some insight into how LSAP programmes affect the (net) wealth of different household can be gained. 
+After the GFC, the FOMC cut interest rates to zero and implemented a number of LSAP programmes. There has been much debate about the financial market and macroeconomic effects of unconventional monetary policy. Here, the effects on asset prices and inequality have been analysed using a VAR model. The responses of certain assets - the Ten Year Treasury yield, the median US house price and the Wilshire 5000 index - to an expansion in the Federal Reserve's balance sheet have been computed. Then, the balance sheets for households along the income distribution are constructed. This means that some insight into how LSAP programmes affect the (net) wealth of different household can be gained. 
 
-The ultimate objective of the Federal Reserve's LSAP programmes is to improve the macroeconomy. Real GDP and inflation expectations show a sustained rise in response to a balance sheet expansion. These are important consideration when assessing the impact on inequality, specifically whether LSAP programmes have improved the economy in such a way as to increase employment and incomes among those in poorer households. There is scope to extend this analysis in that direction. 
+The ultimate objective of the Federal Reserve's LSAP programmes is to improve the macroeconomy. Real GDP and inflation expectations show a sustained rise in response to a balance sheet expansion. These are important considerations when assessing the impact on inequality, specifically whether LSAP programmes have improved the economy in such a way as to increase employment and incomes among those in poorer households. There is scope to extend this analysis in that direction. 
 
-There is a sustained increase in the median US house price as a result of an expansionary Federal Reserve balance sheet shock. This will tend to increase wealth inequality as the richest households have greater absolute levels of real estate wealth. However, poorer households have greater real estate leverage so increases in house prices, with decreases in the cost of debt, tends to decrease wealth inequality.\
+A sustained increase in the median US house price is observed as a result of an expansionary Federal Reserve balance sheet shock. This will tend to increase wealth inequality as the richest households have greater absolute levels of real estate wealth. However, poorer households have greater real estate leverage so increases in house prices, with decreases in the cost of debt, tends to decrease wealth inequality.\
 \
 \
 
@@ -297,7 +297,7 @@ ggplot(MedianSalesPriceHouses)+
   theme(axis.title.x = element_blank())+theme(panel.grid.minor = element_blank())+
   scale_y_continuous(labels=comma, name="U.S. Dollars", breaks = scales::pretty_breaks(n = 10))+
   theme(axis.title=element_text(size=8, family="LM Roman 10"), axis.text=element_text(size=7, family="LM Roman 10"))+
-  ggtitle("Figure 5: Median Sales Price of Houses Sold for the United States")+theme(plot.title = element_text(size=8, family="LM Roman 10"))+
+  ggtitle("Figure 5: Median Sales Price of Houses Sold in the United States")+theme(plot.title = element_text(size=8, family="LM Roman 10"))+
   theme(
     panel.grid.major.x = element_blank() ,
     panel.grid.major.y = element_line( size=.3, color="grey" ))+
@@ -316,7 +316,7 @@ ggplot(TenYearTreasuryConstantMaturity)+
   theme(axis.title.x = element_blank())+theme(panel.grid.minor = element_blank())+
   scale_y_continuous(labels=comma, name="Percent", breaks = scales::pretty_breaks(n = 10))+
   theme(axis.title=element_text(size=8, family="LM Roman 10"), axis.text=element_text(size=7, family="LM Roman 10"))+
-  ggtitle("Figure 6: 10 Year Treasury Constant Maturity Rate")+theme(plot.title = element_text(size=8, family="LM Roman 10"))+
+  ggtitle("Figure 6: 10 Year Treasury Yield (Constant Maturity Rate)")+theme(plot.title = element_text(size=8, family="LM Roman 10"))+
   theme(panel.grid.major.x = element_blank() ,
         panel.grid.major.y = element_line( size=.3, color="grey" ))+
   theme(axis.ticks.y = element_blank())+
